--- a/MyApp1/nbproject/private/private.properties
+++ b/MyApp1/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.39
 j2ee.server.middleware=C:/glassfish5
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Matias\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
